@@ -1139,6 +1139,7 @@ bool IsLightSwitchOn(const std::string lstatus)
 		(lstatus=="Panic")||
 		(lstatus=="Light On")||
 		(lstatus=="Light 2 On")||
-		(lstatus=="Open inline relay")
+		(lstatus=="Open inline relay")||
+		(lstatus.find("Set Level")!=std::string::npos)
 		);
 }
