@@ -55,7 +55,7 @@
 								<th data-i18n="Data">Data</th>
 								<th width="30"><img src="images/air_signal.png" title="RF Signal Level"></img></th>
 								<th width="30"><img src="images/battery.png" title="Battery Level"></img></th>
-								<th width="60"></th>
+								<th width="70"></th>
 								<th width="160" align="left" data-i18n="Last Seen">Last Seen</th>
 						</tr>
 				</thead>
