@@ -173,6 +173,7 @@ images/rainraining.png
 images/remote.png
 images/remote48.png
 images/remove.png
+images/rename.png
 images/scenes.png
 images/security.png
 images/security48.png
